adding the icon file